# controller-firmware

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/firmware/: CMakeLists.txt  config.h  debug.h  display.cpp  display.h  fuel.cpp  fuel.h  haptics.cpp  haptics.h  input.cpp  input.h  layer.cpp  layer.h  runtime.cpp  runtime.h
components/main/: CMakeLists.txt  main.cpp
components/main/apps/: README.md  dashboard.cpp  diagnostics.cpp  doom.cpp  main-menu.cpp  menu.cpp  pong.cpp  screen-saver.cpp  screensaver.cpp
components/main/prebuilt/: keyboard.cpp  keyboard.h  layer-picker.h
components/ssd1306/: CMakeLists.txt
src/firmware/: CMakeLists.txt  app.h  application.cpp  application.h  debug.h  layer.cpp  main.cpp  runtime.cpp  runtime.h
src/main/: CMakeLists.txt  main.cpp
